# OpenGL-3DEngine-Miniproj

./: .gitattributes  .gitignore  CMakeLists.txt  Part1.cpp  README.md
a1/: CMakeLists.txt  Part1.cpp  Part1.h  Part2.cpp  Part2.h  main.cpp
a2/: a2.sln
a2/a2/: a2.cpp  a2.h  a2.vcxproj  a2.vcxproj.filters
a2/a2/x64/Debug/: a2.exe.recipe  a2.ilk  vc143.idb
a2/a2/x64/Debug/a2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  a2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
a2/a2_pyramid_full/: a2_og.cpp  a2_og.h
a3/: README.md  cybertruck.blend  cybertruck.mtl
